Added source generators to make mappings easier.

--- a/KeryxPars.HL7/KeryxPars.HL7.csproj
+++ b/KeryxPars.HL7/KeryxPars.HL7.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KeryxPars.Core\KeryxPars.Core.csproj" />
+    <ProjectReference Include="..\KeryxPars.HL7.SourceGenerators\KeryxPars.HL7.SourceGenerators.csproj" 
+                      OutputItemType="Analyzer" 
+                      ReferenceOutputAssembly="false" />
   </ItemGroup>
 
 </Project>
+
