--- a/Tests/KeryxPars.HL7.Tests/KeryxPars.HL7.Tests.csproj
+++ b/Tests/KeryxPars.HL7.Tests/KeryxPars.HL7.Tests.csproj
@@ -25,6 +25,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\KeryxPars.HL7\KeryxPars.HL7.csproj" />
     <ProjectReference Include="..\..\KeryxPars.Core\KeryxPars.Core.csproj" />
+    <ProjectReference Include="..\..\KeryxPars.HL7.Mapping\KeryxPars.HL7.Mapping.csproj" />
+    <ProjectReference Include="..\..\KeryxPars.HL7.Mapping.SourceGenerators\KeryxPars.HL7.Mapping.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
+
 
 </Project>
