--- a/KeryxPars.HL7.Mapping/KeryxPars.HL7.Mapping.csproj
+++ b/KeryxPars.HL7.Mapping/KeryxPars.HL7.Mapping.csproj
@@ -5,10 +5,26 @@
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
     
+    <!-- NuGet Package Information -->
     <PackageId>KeryxPars.HL7.Mapping</PackageId>
-    <Description>Ultra-fast HL7 to domain model mapping with source generators and zero-reflection performance</Description>
-    <PackageTags>hl7;mapping;source-generator;healthcare;medical</PackageTags>
+    <Version>0.2.0-beta2</Version>
+    <Authors>KeryxPars Contributors</Authors>
+    <Company>KeryxPars</Company>
+    <Description>Blazing-fast HL7-to-domain-model mapping with source generators and zero-reflection performance. Map HL7 messages to POCOs with attributes or fluent API. Industry-first subcomponent support. 45,000+ messages/second with full type conversion.</Description>
+    <PackageProjectUrl>https://github.com/theelevators/KeryxPars</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/theelevators/KeryxPars</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>hl7;mapping;source-generator;healthcare;medical;mapper;dto;domain-model;fast;performance</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KeryxPars.HL7\KeryxPars.HL7.csproj" />
@@ -20,4 +36,5 @@
   </ItemGroup>
 
 </Project>
+
 
