--- a/KeryxPars.HL7.Mapping/KeryxPars.HL7.Mapping.csproj
+++ b/KeryxPars.HL7.Mapping/KeryxPars.HL7.Mapping.csproj
@@ -7,7 +7,7 @@
     
     <!-- NuGet Package Information -->
     <PackageId>KeryxPars.HL7.Mapping</PackageId>
-    <Version>0.2.0-beta2</Version>
+    <Version>0.3.3-beta</Version>
     <Authors>KeryxPars Contributors</Authors>
     <Company>KeryxPars</Company>
     <Description>Blazing-fast HL7-to-domain-model mapping with source generators and zero-reflection performance. Map HL7 messages to POCOs with attributes or fluent API. Industry-first subcomponent support. 45,000+ messages/second with full type conversion.</Description>
