--- a/KeryxPars.HL7.SourceGenerators/KeryxPars.HL7.SourceGenerators.csproj
+++ b/KeryxPars.HL7.SourceGenerators/KeryxPars.HL7.SourceGenerators.csproj
@@ -9,7 +9,7 @@
     
     <!-- NuGet Package Information -->
     <PackageId>KeryxPars.HL7.SourceGenerators</PackageId>
-    <Version>0.2.0-beta2</Version>
+    <Version>0.3.3-beta</Version>
     <Authors>KeryxPars Contributors</Authors>
     <Company>KeryxPars</Company>
     <Description>Source generators for KeryxPars.HL7 providing compile-time validation code generation. Automatically validates HL7 messages at runtime with zero reflection overhead.</Description>
