--- a/KeryxPars.HL7.Mapping.SourceGenerators/KeryxPars.HL7.Mapping.SourceGenerators.csproj
+++ b/KeryxPars.HL7.Mapping.SourceGenerators/KeryxPars.HL7.Mapping.SourceGenerators.csproj
@@ -3,20 +3,20 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>latest</LangVersion>
+    <Nullable>enable</Nullable>
     <IsRoslynComponent>true</IsRoslynComponent>
     <EnforceExtendedAnalyzerRules>true</EnforceExtendedAnalyzerRules>
-    <Nullable>enable</Nullable>
     
     <!-- NuGet Package Information -->
-    <PackageId>KeryxPars.HL7.SourceGenerators</PackageId>
+    <PackageId>KeryxPars.HL7.Mapping.SourceGenerators</PackageId>
     <Version>0.5.2-beta</Version>
     <Authors>KeryxPars Contributors</Authors>
     <Company>KeryxPars</Company>
-    <Description>Source generators for KeryxPars.HL7 providing compile-time validation code generation. Automatically validates HL7 messages at runtime with zero reflection overhead.</Description>
+    <Description>Source generators for KeryxPars.HL7.Mapping providing compile-time HL7-to-domain mapper generation. Creates optimized, zero-reflection mapping code at compile time. Supports DateTime, Enum, collections, and nested objects.</Description>
     <PackageProjectUrl>https://github.com/theelevators/KeryxPars</PackageProjectUrl>
     <RepositoryUrl>https://github.com/theelevators/KeryxPars</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>hl7;source-generator;roslyn;analyzer;validation;code-generation</PackageTags>
+    <PackageTags>hl7;source-generator;roslyn;analyzer;mapper;mapping;code-generation</PackageTags>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <DevelopmentDependency>true</DevelopmentDependency>
     <IncludeBuildOutput>false</IncludeBuildOutput>
@@ -24,7 +24,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
+    <!-- Roslyn dependencies for source generators -->
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.5.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
   </ItemGroup>
 
