--- a/Tests/KeryxPars.HL7.Tests/KeryxPars.HL7.Tests.csproj
+++ b/Tests/KeryxPars.HL7.Tests/KeryxPars.HL7.Tests.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    
+    <!-- Enable source generator output for debugging -->
+    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+    <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)\GeneratedFiles</CompilerGeneratedFilesOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -25,6 +29,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\KeryxPars.HL7\KeryxPars.HL7.csproj" />
     <ProjectReference Include="..\..\KeryxPars.Core\KeryxPars.Core.csproj" />
+    <ProjectReference Include="..\..\KeryxPars.HL7.Mapping\KeryxPars.HL7.Mapping.csproj" />
+    <ProjectReference Include="..\..\KeryxPars.HL7.Mapping.SourceGenerators\KeryxPars.HL7.Mapping.SourceGenerators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
+
 
 </Project>
